--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1"
   }
 }
